--- a/spring-boot-users-chakray/src/main/resources/application.properties
+++ b/spring-boot-users-chakray/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#Propiedades del poyecto
 spring.application.name=spring-boot-users-chakray
+#PROPERTIES DATASOURCE
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=System
+spring.datasource.password=abnerisai33
+
+# Server configuration
+server.port=7575
+
+
+#PROPERTIES HIBERNATE & JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
