Se agregó swagger, se modificó el modelo de User, el repositorio (se agrego el servicio de JPA) se agregó el sortedBy, se modificaron los enpoint y se modificaron unas propiedades de Address

--- a/spring-boot-users-chakray/pom.xml
+++ b/spring-boot-users-chakray/pom.xml
@@ -63,12 +63,18 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc6 -->
+		<!-- Esta dependencia es para agregar el jdbc para crear la conexion a la base de datos  https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc6 -->
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.4</version>
 		</dependency>
+		<!--Esta dependencia es para agregar Swagger al proyecto https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+  <groupId>org.springdoc</groupId>
+  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+  <version>2.0.4</version>
+</dependency>
 	</dependencies>
 
 	<build>
